fix the spacing in menu page

--- a/assets/css/style_menu.css
+++ b/assets/css/style_menu.css
@@ -145,7 +145,7 @@ html {
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   font-size: 1.2rem;
-  margin-left: 25%;
+  margin-left: 28.5%;
   }
 }
 
